--- a/projekt.ipynb
+++ b/projekt.ipynb
@@ -1740,6 +1740,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Analiza zamówień według roku"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Znalezienie daty najstarszego zamówienia"
    ]
   },
@@ -1769,126 +1776,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Suma pieniędzy z zamówień według roku"
+    "Metoda zwracająca zamówienia z wybranego roku"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>years</th>\n",
-       "      <th>prices</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2009</td>\n",
-       "      <td>262627.51</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2010</td>\n",
-       "      <td>967429.21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2011</td>\n",
-       "      <td>1380650.05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2012</td>\n",
-       "      <td>1404149.10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2013</td>\n",
-       "      <td>2141926.76</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>2014</td>\n",
-       "      <td>3119910.51</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>2015</td>\n",
-       "      <td>2678047.27</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>2016</td>\n",
-       "      <td>1754155.89</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>2017</td>\n",
-       "      <td>0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>2018</td>\n",
-       "      <td>0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>2019</td>\n",
-       "      <td>0.00</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    years      prices\n",
-       "0    2009   262627.51\n",
-       "1    2010   967429.21\n",
-       "2    2011  1380650.05\n",
-       "3    2012  1404149.10\n",
-       "4    2013  2141926.76\n",
-       "5    2014  3119910.51\n",
-       "6    2015  2678047.27\n",
-       "7    2016  1754155.89\n",
-       "8    2017        0.00\n",
-       "9    2018        0.00\n",
-       "10   2019        0.00"
-      ]
-     },
-     "execution_count": 137,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def orders_from_year(year):\n",
     "    dates = calendar[(calendar.Year == year)]\n",
     "    orders_from_year = orders\n",
     "    orders_from_year = orders_from_year[orders_from_year.orderdate.isin(dates.DATE)]\n",
-    "    return orders_from_year\n",
-    "\n",
+    "    return orders_from_year"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Liczba zamówień w każdym roku (od roku pierwszego zamówienia do obecnego (2019)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "orders_prices_sum=pd.DataFrame()\n",
+    "years = []\n",
+    "prices = []\n",
+    "for x in range(2009, 2020):\n",
+    "    years.append(x)\n",
+    "    prices.append(len(orders_from_year(x)))\n",
+    "orders_prices_sum['years']=years\n",
+    "orders_prices_sum['prices']=prices\n",
+    "orders_prices_sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "orders_prices_sum=pd.DataFrame()\n",
     "years = []\n",
     "prices = []\n",
@@ -1924,7 +1857,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
